Modificação da Fonte padrão do aplicativo (Futura BT); Adição de suporte a Fragments; Programação de troca de fragments no navigation Drawer; Mudança do ícone de adição de documentos; Ajuste de icones nos itens da Navigation Drawer; Criação da Activity de configurações da aplicação;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Carteira Digital FACI_PT</string>
+    <string name="app_name">Carteira Digital</string>
     <string name="title_activity_navigation">navigation</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -7,4 +7,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
